--- a/Web/Bookworm.Web/Areas/Admin/Views/Book/ApprovedBooks.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Book/ApprovedBooks.cshtml
@@ -4,74 +4,26 @@
     this.ViewData["Title"] = "Approved Books";
 }
 
-@if (Model.Any() == false)
-{
-    <h2 class="text-center pt-5">There are no approved books yet!</h2>
-}
-else
-{
-    <h2 class="text-center pt-5">Manage Approved Books</h2>
-    <div class="my-5">
-        <table class="table table-striped table-dark table-bordered" id="dataTable">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Book</th>
-                    <th class="text-center" scope="col">Unapprove</th>
-                    <th class="text-center" scope="col">View</th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (int i = 0; i <= Model.Count() - 1; i++)
-                {
-                    <tr>
-                        <th scope="row" class="text-center align-middle">@(i + 1)</th>
-                        <td class="align-middle">@Model[i].Title</td>
-                        <td class="text-center align-middle">
-                            <a
-                                class="btn btn-danger modalBtn"
-                                data-model-id="@Model[i].Id"
-                                data-bs-toggle="modal"
-                                data-bs-target="#unapproveBookModal">
-                                <i class="fa-solid fa-circle-xmark fa-xl px-2"></i>
-                            </a>
-                        </td>
-                        <td class="text-center align-middle">
-                            <a
-                                asp-area="admin"
-                                asp-controller="Book"
-                                asp-action="CurrentBook"
-                                asp-route-bookId="@Model[i].Id"
-                                class="btn btn-success">
-                                <i class="fa-solid fa-expand fa-xl px-2"></i>
-                            </a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-}
+<partial name="PartialViews/_BooksTablePartial"/>
 
 <!-- Unapprove Book Modal -->
-<div
-    class="modal fade"
-    id="unapproveBookModal"
-    tabindex="-1"
-    aria-labelledby="exampleModalLabel"
-    aria-hidden="true">
+<div class="modal fade"
+     id="unapproveBookModal"
+     tabindex="-1"
+     aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Unapprove Book</h1>
+                <h3 class="modal-title" id="exampleModalLabel">Unapprove Book</h3>
             </div>
-            <div class="modal-body">
-                <strong>Are you sure you want to unapprove this book?</strong>
+            <div class="modal-body text-center">
+                Are you sure you want to unapprove this book?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
                 <form method="post" asp-area="admin" asp-controller="Book" asp-action="UnapproveBook">
-                    <input type="hidden" name="bookId" class="modelIdInput" value="" />
+                    <input type="hidden" name="bookId" class="unapproveBookIdInput" value="" />
                     <button type="submit" class="btn btn-danger">Unapprove</button>
                 </form>
             </div>
@@ -79,8 +31,6 @@ else
     </div>
 </div>
 
-@section Scripts{
-    <script src="/js/modal.js"></script>
-    <script src="/lib/datatables.net/jquery.dataTables.min.js"></script>
-    <script src="/js/datatable.js"></script>
+@section Scripts {
+    <partial name="PartialViews/_AdminBooksAndQuotesScriptPartial" />
 }
