--- a/Web/Bookworm.Web/Areas/Admin/Views/Book/DeletedBooks.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Book/DeletedBooks.cshtml
@@ -4,56 +4,26 @@
     this.ViewData["Title"] = "Deleted Books";
 }
 
-@if (Model.Any() == false)
-{
-    <h2 class="text-center pt-5">There are no deleted books!</h2>
-}
-else
-{
-    <h2 class="text-center pt-5">Manage Deleted Books</h2>
-    <div class="my-5">
-        <table class="table table-striped table-dark table-bordered" id="dataTable">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Book</th>
-                    <th class="text-center" scope="col">Undelete</th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (int i = 0; i <= Model.Count() - 1; i++)
-                {
-                    <tr>
-                        <th scope="row" class="text-center align-middle">@(i + 1)</th>
-                        <td class="align-middle">@Model[i].Title</td>
-
-                        <td class="text-center align-middle">
-                            <a class="btn btn-success modalBtn" data-model-id="@Model[i].Id" data-bs-toggle="modal" data-bs-target="#undeleteBookModal">
-                                <i class="fa-solid fa-circle-check fa-xl px-2"></i>
-                            </a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-}
+<partial name="PartialViews/_BooksTablePartial" />
 
 <!-- Undelete Book Modal -->
-<div class="modal fade" id="undeleteBookModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade"
+     id="undeleteBookModal"
+     tabindex="-1"
+     aria-labelledby="exampleModalLabel"
+     aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Undelete Book</h1>
-                <button type="button" class="btn-modal-close" data-bs-dismiss="modal" aria-label="Close"><i class="fa-solid fa-x"></i></button>
+                <h3 class="modal-title" id="exampleModalLabel">Undelete Book</h3>
             </div>
-            <div class="modal-body">
-                <strong>Are you sure you want to undelete this book?</strong>
+            <div class="modal-body text-center">
+                Are you sure you want to undelete this book?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
                 <form method="post" asp-area="admin" asp-controller="Book" asp-action="UndeleteBook">
-                    <input type="hidden" name="bookId" class="modelIdInput" value="" />
+                    <input type="hidden" name="bookId" class="undeleteBookIdInput" value="" />
                     <button type="submit" class="btn btn-danger">Undelete</button>
                 </form>
             </div>
@@ -61,8 +31,6 @@ else
     </div>
 </div>
 
-@section Scripts{
-    <script src="~/js/modal.js"></script>
-    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
-    <script src="~/js/datatable.js"></script>
+@section Scripts {
+    <partial name="PartialViews/_AdminBooksAndQuotesScriptPartial" />
 }
