--- a/Web/Bookworm.Web/Areas/Admin/Views/Book/UnapprovedBooks.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Book/UnapprovedBooks.cshtml
@@ -4,63 +4,7 @@
     this.ViewData["Title"] = "Unapproved Books";
 }
 
-@if (Model.Any() == false)
-{
-    <h2 class="text-center pt-5">There are no books waiting to be approved!</h2>
-}
-else
-{
-    <h2 class="text-center pt-5">Manage Unapproved Books</h2>
-    <div class="my-5">
-        <table class="table table-dark table-bordered table-hover" id="dataTable">
-            <thead>
-                <tr>
-                    <th scope="col">#</th>
-                    <th scope="col">Book</th>
-                    <th class="text-center" scope="col">Approve</th>
-                    <th class="text-center" scope="col">Delete</th>
-                    <th class="text-center" scope="col">View</th>
-                </tr>
-            </thead>
-            <tbody>
-                @for (int i = 0; i <= Model.Count() - 1; i++)
-                {
-                    <tr>
-                        <th scope="row" class="text-center align-middle">@(i + 1)</th>
-
-                        <td class="align-middle">@Model[i].Title</td>
-
-                        <td class="text-center align-middle">
-                            <button onclick="onModalBtnClick('@Model[i].Id', 'approveBookIdInput')"
-                                    class="btn btn-success modalBtn"
-                                    data-bs-toggle="modal"
-                                    data-bs-target="#approveBookModal">
-                                <i class="fa-solid fa-circle-check fa-xl px-2"></i>
-                            </button>
-                        </td>
-                        <td class="text-center align-middle">
-                            <button class="btn btn-danger modalBtn"
-                                    data-model-id="@Model[i].Id"
-                                    data-bs-toggle="modal"
-                                    data-bs-target="#deleteBookModal">
-                                <i class="fa-solid fa-trash-can fa-xl px-2"></i>
-                            </button>
-                        </td>
-                        <td class="text-center align-middle">
-                            <a target="_blank" asp-area=""
-                               asp-controller="Book"
-                               asp-action="Details"
-                               asp-route-id="@Model[i].Id"
-                               class="btn btn-success">
-                                <i class="fa-solid fa-expand fa-xl px-2"></i>
-                            </a>
-                        </td>
-                    </tr>
-                }
-            </tbody>
-        </table>
-    </div>
-}
+<partial name="PartialViews/_BooksTablePartial" />
 
 <!-- Approve Book Modal -->
 <div class="modal fade"
@@ -71,10 +15,10 @@ else
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Approve Book</h1>
+                <h3 class="modal-title" id="exampleModalLabel">Approve Book</h3>
             </div>
             <div class="modal-body text-center">
-                <strong>Are you sure you want to approve this book?</strong>
+                Are you sure you want to approve this book?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
@@ -96,15 +40,15 @@ else
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
             <div class="modal-header">
-                <h1 class="modal-title fs-5" id="exampleModalLabel">Delete Book</h1>
+                <h3 class="modal-title" id="exampleModalLabel">Delete Book</h3>
             </div>
             <div class="modal-body text-center">
-                <strong>Are you sure you want to delete this book?</strong>
+                Are you sure you want to delete this book?
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-dark" data-bs-dismiss="modal">Close</button>
                 <form method="post" asp-area="admin" asp-controller="Book" asp-action="Delete">
-                    <input type="hidden" name="bookId" class="modelIdInput" value="" />
+                    <input type="hidden" name="bookId" class="deleteBookIdInput" value="" />
                     <button type="submit" class="btn btn-danger">Delete</button>
                 </form>
             </div>
@@ -113,7 +57,5 @@ else
 </div>
 
 @section Scripts {
-    <script src="~/js/modal.js"></script>
-    <script src="~/js/datatable.js"></script>
-    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
+    <partial name="PartialViews/_AdminBooksAndQuotesScriptPartial" />
 }
