--- a/Web/Bookworm.Web/Areas/Admin/Views/Quote/DeletedQuotes.cshtml
+++ b/Web/Bookworm.Web/Areas/Admin/Views/Quote/DeletedQuotes.cshtml
@@ -30,7 +30,5 @@
 </div>
 
 @section Scripts {
-    <script src="~/js/modal.js"></script>
-    <script src="~/js/datatable.js"></script>
-    <script src="~/lib/datatables.net/jquery.dataTables.min.js"></script>
+    <partial name="PartialViews/_AdminBooksAndQuotesScriptPartial" />
 }
